Aircraft types started
Removed plane identifier hash - some todos added where that currently broke features
Switched to modern .net code analyzers
