# OpenSky.AgentMSFS/OpenAPIs/swagger.json
@@ -5,6 +5,120 @@
     "version": "v1"
   },
   "paths": {
+    "/AircraftType": {
+      "get": {
+        "tags": [
+          "AircraftType"
+        ],
+        "summary": "Gets all enabled and current aircraft types.",
+        "description": "sushi.at, 02/06/2021.",
+        "operationId": "GetAircraftTypes",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/AircraftTypeIEnumerableApiResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AircraftTypeIEnumerableApiResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AircraftTypeIEnumerableApiResponse"
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "AircraftType"
+        ],
+        "summary": "Adds a new aircraft type.",
+        "description": "sushi.at, 02/06/2021.",
+        "operationId": "AddAircraftType",
+        "requestBody": {
+          "description": "The new aircraft type to add.",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AircraftType"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AircraftType"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/AircraftType"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/StringApiResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/StringApiResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/StringApiResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/AircraftType/all": {
+      "get": {
+        "tags": [
+          "AircraftType"
+        ],
+        "summary": "Gets all aircraft types (including disabled and previous).",
+        "description": "sushi.at, 02/06/2021.",
+        "operationId": "GetAllAircraftTypes",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/AircraftTypeIEnumerableApiResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AircraftTypeIEnumerableApiResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AircraftTypeIEnumerableApiResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/Airport": {
       "get": {
         "tags": [
@@ -12,32 +126,24 @@
         ],
         "summary": "Gets all available airports (ICAO code only).",
         "description": "sushi.at, 02/05/2021.",
+        "operationId": "GetAirports",
         "responses": {
           "200": {
             "description": "Success",
             "content": {
               "text/plain": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  }
+                  "$ref": "#/components/schemas/StringIEnumerableApiResponse"
                 }
               },
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  }
+                  "$ref": "#/components/schemas/StringIEnumerableApiResponse"
                 }
               },
               "text/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  }
+                  "$ref": "#/components/schemas/StringIEnumerableApiResponse"
                 }
               }
             }
@@ -52,7 +158,7 @@
         ],
         "summary": "Gets one specific airport.",
         "description": "sushi.at, 03/05/2021.",
-        "operationId": "FindOne",
+        "operationId": "GetAirport",
         "parameters": [
           {
             "name": "icao",
@@ -70,17 +176,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/Airport"
+                  "$ref": "#/components/schemas/AirportApiResponse"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Airport"
+                  "$ref": "#/components/schemas/AirportApiResponse"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Airport"
+                  "$ref": "#/components/schemas/AirportApiResponse"
                 }
               }
             }
@@ -725,6 +831,194 @@
   },
   "components": {
     "schemas": {
+      "AircraftType": {
+        "required": [
+          "atcModel",
+          "atcType",
+          "category",
+          "engineType",
+          "name",
+          "uploaderID"
+        ],
+        "type": "object",
+        "properties": {
+          "atcModel": {
+            "maxLength": 100,
+            "minLength": 0,
+            "type": "string",
+            "description": "Gets or sets the ATCModel property in the sim."
+          },
+          "atcType": {
+            "maxLength": 100,
+            "minLength": 0,
+            "type": "string",
+            "description": "Gets or sets the ATCType property in the sim."
+          },
+          "category": {
+            "$ref": "#/components/schemas/AircraftTypeCategory"
+          },
+          "comments": {
+            "type": "string",
+            "description": "Gets or sets the comments (moderation status, retired, needs fixing, etc.).",
+            "nullable": true
+          },
+          "detailedChecksDisabled": {
+            "type": "boolean",
+            "description": "Gets or sets a value indicating whether the detailed checks are TEMPORARILY disabled - only\r\nuse this on patch days until a new version of the plane can be added."
+          },
+          "emptyWeight": {
+            "type": "number",
+            "description": "Gets or sets the empty weight in pounds.",
+            "format": "double"
+          },
+          "enabled": {
+            "type": "boolean",
+            "description": "Gets or sets a value indicating whether this aircraft type is enabled."
+          },
+          "engineCount": {
+            "type": "integer",
+            "description": "Gets or sets the number of engines.",
+            "format": "int32"
+          },
+          "engineType": {
+            "type": "string",
+            "description": "Gets or sets the type of the engine (engine type as reported in the sim)."
+          },
+          "flapsAvailable": {
+            "type": "boolean",
+            "description": "Gets or sets a value indicating whether this aircraft has flaps."
+          },
+          "fuelTotalCapacity": {
+            "type": "number",
+            "description": "Gets or sets the fuel total capacity in gallons.",
+            "format": "double"
+          },
+          "id": {
+            "type": "string",
+            "description": "Gets or sets the identifier.",
+            "format": "uuid"
+          },
+          "isGearRetractable": {
+            "type": "boolean",
+            "description": "Gets or sets a value indicating whether this aircraft has retractable landing gear."
+          },
+          "isVanilla": {
+            "type": "boolean",
+            "description": "Gets or sets a value indicating whether this aircraft is available in the vanilla sim or is\r\ncoming from a mod."
+          },
+          "isVariantOf": {
+            "type": "string",
+            "description": "Gets or sets the ID of the aircraft that this one is a variant of.",
+            "format": "uuid",
+            "nullable": true
+          },
+          "maxGrossWeight": {
+            "type": "number",
+            "description": "Gets or sets the maximum gross weight in pounds.",
+            "format": "double"
+          },
+          "maxPrice": {
+            "type": "integer",
+            "description": "Gets or sets the maximum selling price.",
+            "format": "int32"
+          },
+          "minPrice": {
+            "type": "integer",
+            "description": "Gets or sets the minimum selling price.",
+            "format": "int32"
+          },
+          "name": {
+            "maxLength": 50,
+            "minLength": 0,
+            "type": "string",
+            "description": "Gets or sets the name of the aircraft."
+          },
+          "needsCoPilot": {
+            "type": "boolean",
+            "description": "Gets or sets a value indicating whether the aircraft needs a co-pilot."
+          },
+          "nextVersion": {
+            "type": "string",
+            "description": "Gets or sets the next version of this aircraft type - to migrate existing aircraft to this\r\nnew type.",
+            "format": "uuid",
+            "nullable": true
+          },
+          "uploaderID": {
+            "maxLength": 255,
+            "minLength": 0,
+            "type": "string",
+            "description": "Gets or sets the identifier of the uploader user."
+          }
+        },
+        "additionalProperties": false,
+        "description": "Aircraft type model."
+      },
+      "AircraftTypeCategory": {
+        "enum": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6
+        ],
+        "type": "integer",
+        "description": "Values that represent aircraft type categories.0 = SEP, 1 = MEP, 2 = SET, 3 = MET, 4 = Jet, 5 = NBAirliner, 6 = WBAirliner",
+        "format": "int32",
+        "x-enumNames": [
+          "SEP",
+          "MEP",
+          "SET",
+          "MET",
+          "Jet",
+          "NBAirliner",
+          "WBAirliner"
+        ],
+        "x-enum-varnames": [
+          "SEP",
+          "MEP",
+          "SET",
+          "MET",
+          "Jet",
+          "NBAirliner",
+          "WBAirliner"
+        ]
+      },
+      "AircraftTypeIEnumerableApiResponse": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/AircraftType"
+            },
+            "description": "Gets or sets the embedded data of type T.",
+            "nullable": true
+          },
+          "errorDetails": {
+            "type": "string",
+            "description": "Gets or sets the error details (NULL if no error).",
+            "nullable": true
+          },
+          "isError": {
+            "type": "boolean",
+            "description": "Gets or sets a value indicating whether this response is reporting an error."
+          },
+          "message": {
+            "type": "string",
+            "description": "Gets or sets the message.",
+            "nullable": true
+          },
+          "status": {
+            "type": "string",
+            "description": "Gets or sets the status.",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false,
+        "description": "API standard response model."
+      },
       "Airport": {
         "required": [
           "hashCode",
@@ -836,6 +1130,35 @@
         "additionalProperties": false,
         "description": "Airport model."
       },
+      "AirportApiResponse": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "$ref": "#/components/schemas/Airport"
+          },
+          "errorDetails": {
+            "type": "string",
+            "description": "Gets or sets the error details (NULL if no error).",
+            "nullable": true
+          },
+          "isError": {
+            "type": "boolean",
+            "description": "Gets or sets a value indicating whether this response is reporting an error."
+          },
+          "message": {
+            "type": "string",
+            "description": "Gets or sets the message.",
+            "nullable": true
+          },
+          "status": {
+            "type": "string",
+            "description": "Gets or sets the status.",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false,
+        "description": "API standard response model."
+      },
       "ApplicationToken": {
         "required": [
           "name"
@@ -945,6 +1268,9 @@
       "DataImportStatusApiResponse": {
         "type": "object",
         "properties": {
+          "data": {
+            "$ref": "#/components/schemas/DataImportStatus"
+          },
           "errorDetails": {
             "type": "string",
             "description": "Gets or sets the error details (NULL if no error).",
@@ -963,9 +1289,6 @@
             "type": "string",
             "description": "Gets or sets the status.",
             "nullable": true
-          },
-          "data": {
-            "$ref": "#/components/schemas/DataImportStatus"
           }
         },
         "additionalProperties": false,
@@ -994,6 +1317,12 @@
       "GuidNullableApiResponse": {
         "type": "object",
         "properties": {
+          "data": {
+            "type": "string",
+            "description": "Gets or sets the embedded data of type T.",
+            "format": "uuid",
+            "nullable": true
+          },
           "errorDetails": {
             "type": "string",
             "description": "Gets or sets the error details (NULL if no error).",
@@ -1011,12 +1340,6 @@
           "status": {
             "type": "string",
             "description": "Gets or sets the status.",
-            "nullable": true
-          },
-          "data": {
-            "type": "string",
-            "description": "Gets or sets the embedded data of type T.",
-            "format": "uuid",
             "nullable": true
           }
         },
@@ -1086,6 +1409,9 @@
       "LoginResponseApiResponse": {
         "type": "object",
         "properties": {
+          "data": {
+            "$ref": "#/components/schemas/LoginResponse"
+          },
           "errorDetails": {
             "type": "string",
             "description": "Gets or sets the error details (NULL if no error).",
@@ -1104,9 +1430,6 @@
             "type": "string",
             "description": "Gets or sets the status.",
             "nullable": true
-          },
-          "data": {
-            "$ref": "#/components/schemas/LoginResponse"
           }
         },
         "additionalProperties": false,
@@ -1159,6 +1482,9 @@
       "RefreshTokenResponseApiResponse": {
         "type": "object",
         "properties": {
+          "data": {
+            "$ref": "#/components/schemas/RefreshTokenResponse"
+          },
           "errorDetails": {
             "type": "string",
             "description": "Gets or sets the error details (NULL if no error).",
@@ -1177,9 +1503,6 @@
             "type": "string",
             "description": "Gets or sets the status.",
             "nullable": true
-          },
-          "data": {
-            "$ref": "#/components/schemas/RefreshTokenResponse"
           }
         },
         "additionalProperties": false,
@@ -1288,6 +1611,11 @@
       "StringApiResponse": {
         "type": "object",
         "properties": {
+          "data": {
+            "type": "string",
+            "description": "Gets or sets the embedded data of type T.",
+            "nullable": true
+          },
           "errorDetails": {
             "type": "string",
             "description": "Gets or sets the error details (NULL if no error).",
@@ -1306,10 +1634,39 @@
             "type": "string",
             "description": "Gets or sets the status.",
             "nullable": true
-          },
+          }
+        },
+        "additionalProperties": false,
+        "description": "API standard response model."
+      },
+      "StringIEnumerableApiResponse": {
+        "type": "object",
+        "properties": {
           "data": {
-            "type": "string",
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
             "description": "Gets or sets the embedded data of type T.",
+            "nullable": true
+          },
+          "errorDetails": {
+            "type": "string",
+            "description": "Gets or sets the error details (NULL if no error).",
+            "nullable": true
+          },
+          "isError": {
+            "type": "boolean",
+            "description": "Gets or sets a value indicating whether this response is reporting an error."
+          },
+          "message": {
+            "type": "string",
+            "description": "Gets or sets the message.",
+            "nullable": true
+          },
+          "status": {
+            "type": "string",
+            "description": "Gets or sets the status.",
             "nullable": true
           }
         },
